feat: Auction bidding